--- a/work-smooth/src/App.css
+++ b/work-smooth/src/App.css
@@ -1,5 +1,12 @@
-html, body{
+html, body, #root{
   width: 100vw;
   height: 100vh;
   background: #F1F3F5;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'Nanum Gothic', sans-serif;
+  box-sizing: border-box;
+}
+
+#root{
+  display: inline-block;
 }
