--- a/work-smooth/src/App.css
+++ b/work-smooth/src/App.css
@@ -5,6 +5,7 @@ html, body, #root{
   font-family: 'Noto Sans KR', sans-serif;
   font-family: 'Nanum Gothic', sans-serif;
   box-sizing: border-box;
+  color: black;
 }
 
 #root{
